# agentic-ai-c

./: .gitignore  pyproject.toml
src/: agentic_rag.py  graph_rag.py  hybrid_rag_4.py  lexical_search.py  semantic_search_1.py  semantic_search_pdf_2.py
src/RAG_evals/: golden_dataset.py  ragas_evals.py  semantic_direct_formula_evals.py
