[project]
name = "agentic-ai-c"
version = "0.1.0"
description = ""
authors = [
    {name = "Poornima",email = "poornishendha3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain (>=1.3.9,<2.0.0)",
    "langchain-openai (>=1.3.2,<2.0.0)",
    "langgraph (>=1.2.5,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "agentic_ai_c", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
